<resources>
    <string name="app_name">S. R. Citas</string>

    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Clave</string>
    <string name="btn_login">Ingresar</string>

    <string name="label_go_to_register">¿Aún no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">Confirmar registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="date_format">%1$s-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita médica #%1$d</string>
    <string name="item_appointment_date">Atención el día %1$s</string>
    <string name="item_appointment_time">A las %1$s"</string>
    <string name="mis_citas_m_dicas">Mis citas médicas</string>
    <string name="press_back_again">Presiones una vez más para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Estás seguro que deseas salir?</string>
    <string name="dialog_create_appoitnment_exit_message">Si abandonas el registro, los datos que habías ingresado se perderan</string>
    <string name="dialog_create_appoitnment_exit_positive_btn">Si, salir</string>
    <string name="dialog_create_appoitnment_exit_negative_btn">Continuar registro</string>
    <string name="validate_appointment_description">La descripción es demasiado corta</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>
    <string name="error_loading_specialties">Ocurrió un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrió en problema al cargar los médicos</string>
    <string name="error_loading_hours">No se han podido cargar las horas</string>
    <string name="label_select_doctor_and_date">Seleccione un médico y una fecha, para ver sus horas disponibles</string>
    <string name="label_not_available_hours">No se encontraron horas disponibles para el médico en el dia seleccionado</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y clave...</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="item_appointment_created_at">Esta cita se registró el día %1$s con la siguiente descripción:</string>
    <string name="create_appointment_success">Cita registrada correctamente</string>
    <string name="create_appointment_error">Ocurrió un error inesperado registrando la cita médica.</string>
    <string name="label_password_confirmation">Confirmar Clave</string>
    <string name="error_register_empty_fields">Por favor completar todos los datos solicitados...</string>
    <string name="error_register_passwords_do_not_match">Las claves no coinciden</string>
    <string name="error_register_validation">Ocurrió un error en e registro</string>
    <string name="error_register_password_count_character">Las claves deben ser mayor a 8 caracteres</string>
    <string name="default_notification_channel_id">default channel</string>
</resources>
