<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvStep1"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_description"
            android:layout_marginTop="6dp"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_specialty"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/spinnerSpecialties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_type"
            android:layout_marginTop="8dp"/>

        <RadioGroup
            android:id="@+id/rgType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            android:checkedButton="@id/rbType1">

            <RadioButton
                android:id="@+id/rbType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type1"/>

            <RadioButton
                android:id="@+id/rbType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type2" />

            <RadioButton
                android:id="@+id/rbType3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type3" />
        </RadioGroup>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:text="@string/btn_next"
            android:drawableEnd="@drawable/ic_navigate_next"
            style="@style/MenuButton"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>