<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity"
    android:background="@drawable/bg_gradient"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/label_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnCreateAppointment"
        android:layout_width="match_parent"
        android:text="@string/btn_create_appointment"
        android:drawableStart="@drawable/ic_add_circle"
        style="@style/MenuButton"/>

    <Button
        android:id="@+id/btnMyAppointments"
        android:layout_width="match_parent"
        android:text="@string/btn_my_appointments"
        android:drawableStart="@drawable/ic_schedule"
        style="@style/MenuButton"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:text="@string/btn_logout"
        android:drawableStart="@drawable/ic_logout"
        style="@style/MenuButton"/>
</LinearLayout>