<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvStep3"
    android:visibility="gone"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_confirm_appointment_data"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tvConfirmDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_specialty"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tvConfirmSpecialty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_type"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tvConfirmType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_doctor"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tvConfirmDoctorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_scheduled_date"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tvConfirmScheduledDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_scheduled_time"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tvConfirmScheduledTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnConfirmAppointment"
                android:layout_width="match_parent"
                android:text="@string/btn_confirm"
                android:drawableEnd="@drawable/ic_check"
                style="@style/MenuButton"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>