<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvStep2"
    android:visibility="gone"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    tools:visibility="visible">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_doctor"
                android:layout_marginTop="8dp"/>

            <Spinner
                android:id="@+id/spinnerDoctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_scheduled_date"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/etScheduledDate"
                android:onClick="onClickScheduledDate"
                android:inputType="date"
                android:maxLines="1"
                android:focusable="false"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvSelectDoctorAndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/label_select_doctor_and_date"
                android:layout_margin="6dp"/>

            <TextView
                android:id="@+id/tvNotAvailableHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/label_not_available_hours"
                android:layout_margin="6dp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/rgLeft"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM"
                        android:visibility="gone"
                        tools:visibility="visible" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00 AM"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rgRight"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:30 AM"
                        android:visibility="gone"
                        tools:visibility="visible" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:30 AM"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btnNext2"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/btn_next"
                android:drawableEnd="@drawable/ic_navigate_next"
                style="@style/MenuButton"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>
